--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
 
           <h2 class="text-center">Hello We are <span> DesignWiz </span></h2>
-          <div class="text-center text-white mb-4"> a Group of Creative Design Nomades </div>
+          <div class="subheading text-center text-white mb-4"> a Group of Creative Design Nomades </div>
 
           <div class="typewriter-box">
             <p class="text-center m-2"> We do <br> <span class="typewriter" id="typewriter" data-id="Graphic Designing,Front End Developmrnt,Wordpress Development,Freelancing"></span> </p>
@@ -102,8 +102,8 @@
                 </div>
                 
                 <div class="heading iLove">
-                  <span>WE ENJOY</span> <br>
-                  <h3>WE ENJOY</h3>
+                  <span>We Enjoy</span> <br>
+                  <h3>We Enjoy</h3>
                 </div>
               </div>
 
@@ -485,8 +485,8 @@
           </div>
 
           <div class="heading2 mt-5">
-            <span> DEVELOPMENT & PRODUCTIVITY <br> TOOLS WE USE </span> <br>
-            <h4> DEVELOPMENT & PRODUCTIVITY <br> TOOLS WE USE </h4>
+            <span> Development & Productivity<br> Tools We Use </span> <br>
+            <h4> Development & Productivity <br> Tools We Use </h4>
           </div>
 
           <div class="box text-center mt-4">
@@ -501,101 +501,13 @@
 
       </section>
 
-      <!--=== <section id="coffee" class="coffee border-bt">
-
-        <div class="container">
-
-          <div class="heading">
-            <span> Buy Me Coffee </span> <br>
-            <h3> Buy Me Coffee </h3>
-          </div>
-
-          <div class="row mt-5">
-
-            <div class="col-xl-4 col-md-6 mb-4 mt-1">
-              <div class="box">
-
-                <div class="img">
-                  <img src="image/project/project2.png" alt="buy me coffee">
-                </div>
-
-                <div class="name">
-                  Modern Resume / CV Design Made by me
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div class="price">
-                    10 $
-                  </div>
-                  <div class="title">
-                    Purchase Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="col-xl-4 col-md-6 mb-4 mt-1">
-              <div class="box">
-
-                <div class="img">
-                  <img src="image/project/project2.png" alt="buy me coffee">
-                </div>
-
-                <div class="name">
-                  Modern Resume / CV Design Made by me
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div class="price">
-                    10 $
-                  </div>
-                  <div class="title">
-                    Purchase Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="col-xl-4 col-md-6 mb-4 mt-1">
-              <div class="box">
-
-                <div class="img">
-                  <img src="image/project/project2.png" alt="buy me coffee">
-                </div>
-
-                <div class="name">
-                  Modern Resume / CV Design Made by me
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div class="price">
-                    10 $
-                  </div>
-                  <div class="title">
-                    Purchase Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
-          </div>
-        </div>
-
-      </section> -->
-
       <section id="resume" class="resume border-bt">
 
         <div class="container">
 
           <div class="heading">
-            <span> Connect <br class="d-sm-none"> with us </span> <br>
-            <h3> Connect <br class="d-sm-none"> with us  </h3>
+            <span> Connect with us </span> <br>
+            <h3> Connect with us  </h3>
           </div>
 
           <div class="row mt-5">
