--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="subheading text-center text-white mb-4"> a Group of Creative Design Nomades </div>
 
           <div class="typewriter-box">
-            <p class="text-center m-2"> We do <br> <span class="typewriter" id="typewriter" data-id="Graphic Designing,Front End Developmrnt,Wordpress Development,Freelancing"></span> </p>
+            <p class="text-center m-2"> We do <br> <span class="typewriter" id="typewriter" data-id="Graphic Designing,Front End Development,Wordpress Development,Freelancing"></span> </p>
           </div>
           
           <div class="text-center years mt-3">
