new project added

--- a/index.html
+++ b/index.html
@@ -334,7 +334,62 @@
                     View Design
                   </div>
 
-                  <button class="my-btn" onclick="caseStudy(this)" data-content="info one <br> testing">Info</button>
+                  <button class="my-btn" onclick="caseStudy(this)" data-content="
+                  <b> Case Study: <br> </b> Chizzy Best Shawarma and Pastries <br><br>
+                  <b> Industry: <br> </b> Food and Pastries <br><br>
+                  <b> Challenge: <br> </b> Chizzy Best Shawarma and Pastries, 
+                  a food stand, was struggling to attract passersby and establish 
+                  a strong presence in the market. People often confused them with 
+                  a POS stand, resulting in missed opportunities and lost sales. <br><br>
+                  <b> Solution: <br> </b> We provided professional graphic designing, 
+                  banner printing and customization, and T-shirt design and printing 
+                  services to help Chizzy Best Shawarma and Pastries stand out and 
+                  build a strong brand identity. <br> <br>
+                  <b> Results: </b> <br>
+                  <ul> 
+                    <li> Increased awareness and visibility among target audience </li>
+                    <li> Significant increase in sales </li>
+                    <li> Decrease in customers mistaking them for a different type of business </li>
+                  </ul> <br> <br>
+                  <b> Testimonial: </b> <br>
+                  The banners are really what we needed all along. 
+                  Business has been so much better since we put them up. 
+                  I'm glad I contacted your team for this job.
+                   - Chizzy, Owner of Chizzy Best Shawarma and Pastries <br> <br>
+                   <b> Services Provided: </b> <br>
+                  <ul> 
+                    <li> Professional graphic designing </li>
+                    <li> Banner printing and customization </li>
+                    <li> T-shirt design and printing </li>
+                  </ul> <br> <br>
+                  By providing Chizzy Best Shawarma and Pastries with eye-catching 
+                  banners and a consistent brand image, we helped them establish a 
+                  strong presence in the market, attract more customers, and increase 
+                  sales. Our services enabled them to stand out from the competition and 
+                  achieve their business goals.">
+                  Info</button>
+
+                </div>
+
+              </div>
+
+            </div>
+            
+            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1 d-none">
+              <div class="box design">
+
+                <div class="img">
+                  <img src="image/project/designs/design2.png" alt="Shawarma Banner Design: Flavorful Promotions">
+                </div>
+
+                <div class="name d-flex align-items-center">
+                  Shawarma Banner Design: Flavorful Promotions
+                </div>
+
+                <div class="purchase d-flex justify-content-between">
+                  <div role="button" class="projectImg" data-filter="Shawarma Banner Design: Flavorful Promotions" data-id="image/project/designs/design2.png" onclick="enlarge(this)">
+                    View Design
+                  </div>
                 </div>
 
               </div>
