--- a/projects.html
+++ b/projects.html
@@ -74,11 +74,32 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg d-flex align-items-center" data-filter="Shawarma Shop Vibes: Creative Banner Design" data-id="/image/project/designs/design1.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg d-flex align-items-center" data-filter="Shawarma Shop Vibes: Creative Banner Design" data-id="image/project/designs/design1.png" onclick="enlarge(this)">
                     View Design
                   </div>
 
                   <button class="my-btn" onclick="caseStudy(this)" data-content="info one <br> testing">Info</button>
+                </div>
+
+              </div>
+
+            </div>
+
+            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
+              <div class="box design myCaseStudy">
+
+                <div class="img">
+                  <img src="image/project/designs/design2.png" alt="Shawarma Banner Design: Flavorful Promotions">
+                </div>
+
+                <div class="name d-flex align-items-center">
+                  Shawarma Banner Design: Flavorful Promotions
+                </div>
+
+                <div class="purchase d-flex justify-content-between">
+                  <div role="button" class="projectImg" data-filter="Shawarma Banner Design: Flavorful Promotions" data-id="image/project/designs/design2.png" onclick="enlarge(this)">
+                    View Design
+                  </div>
                 </div>
 
               </div>
@@ -97,7 +118,7 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Point of Sale: Creative Design Solutions" data-id="/image/project/designs/design4.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Point of Sale: Creative Design Solutions" data-id="image/project/designs/design4.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -118,7 +139,7 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Cool Concepts: Ice Cube Company Design Showcase" data-id="/image/project/designs/design6.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Cool Concepts: Ice Cube Company Design Showcase" data-id="image/project/designs/design6.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -126,7 +147,8 @@
               </div>
 
             </div>
-<!--==== 
+
+            <!--==== 
             <div class="col-md-12 projectList mb-4 mt-1">
               <div class="box d-block d-xl-flex web">
 
@@ -192,7 +214,7 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="/image/project/designs/design3.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="image/project/designs/design3.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -213,7 +235,7 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="/image/project/designs/design7.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="image/project/designs/design7.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -221,6 +243,7 @@
               </div>
 
             </div>
+
             <div class="col-xl-4 projectList col-md-6 mb-4 mt-1 d-none">
               <div class="box design">
 
@@ -233,28 +256,7 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="/image/project/designs/design9.png" onclick="enlarge(this)">
-                    View Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
-              <div class="box design">
-
-                <div class="img">
-                  <img src="image/project/designs/design2.png" alt="Shawarma Banner Design: Flavorful Promotions">
-                </div>
-
-                <div class="name d-flex align-items-center">
-                  Shawarma Banner Design: Flavorful Promotions
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Shawarma Banner Design: Flavorful Promotions" data-id="/image/project/designs/design2.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="image/project/designs/design9.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -275,7 +277,49 @@
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Fryer Favorites: Guomia Recipe Book Cover Design" data-id="/image/project/designs/design8.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Fryer Favorites: Guomia Recipe Book Cover Design" data-id="image/project/designs/design8.png" onclick="enlarge(this)">
+                    View Design
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
+              <div class="box design">
+
+                <div class="img">
+                  <img src="image/project/designs/design10.png" alt="AirFryer Bookcover: Recipe Book Cover Design">
+                </div>
+
+                <div class="name">
+                  AirFryer Bookcover: Recipe Book Cover Design
+                </div>
+
+                <div class="purchase d-flex justify-content-between">
+                  <div role="button" class="projectImg" data-filter="AirFryer Bookcover: Recipe Book Cover Design" data-id="image/project/designs/design10.png" onclick="enlarge(this)">
+                    View Design
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
+              <div class="box design">
+
+                <div class="img">
+                  <img src="image/project/designs/design11.png" alt="Chefman AirFryer Bookcover: Design Your Covers">
+                </div>
+
+                <div class="name">
+                  Chefman AirFryer Bookcover: Design Your Covers
+                </div>
+
+                <div class="purchase d-flex justify-content-between">
+                  <div role="button" class="projectImg" data-filter="Chefman AirFryer Bookcover: Design Your Covers" data-id="image/project/designs/design11.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
