--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="shortcut icon" href="image/fav.png" type="image/x-icon">
-    <meta name="description" content=" Grapgic designing | web development | content writting | tutoring">
-    <title>Designwiz Portfolio</title>
+    <meta name="description" content="Grapgic designer | web developer | content writter | tutoring | 20+ projects">
+    <title>Propser's Portfolio</title>
 </head>
 <body>
 
@@ -20,8 +20,8 @@
           <img src="image/designwiz.png" alt="" class="image-fluid rounded-circle">
           <h1 class="text-light">DesignWiz</h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://web.facebook.com/OfficialDesignWiz/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.instagram.com/offical_design_wiz/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/prosper_richmond_george28/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
             <a href="https://wa.me/message/VHWMGTLN2TYKA1" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
             <a href="https://www.linkedin.com/in/designwiz/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             <a href="https://www.fiverr.com/prospergeorge28" target="_blank" class="fiver fw-bold">fi</a>
@@ -63,7 +63,7 @@
           <div class="row mt-5">
 
             <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
-              <div class="box design">
+              <div class="box design myCaseStudy">
 
                 <div class="img">
                   <img src="image/project/designs/design1.png" alt="Shawarma Shop Vibes: Creative Banner Design">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
-              <div class="box design myCaseStudy">
+              <div class="box design">
 
                 <div class="img">
                   <img src="image/project/designs/design2.png" alt="Shawarma Banner Design: Flavorful Promotions">
