--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
-          <img src="image/designwiz.png" alt="" class="image-fluid rounded-circle">
+          <img src="image/the designer.jpg" alt="" class="image-fluid rounded-circle">
           <h1 class="text-light"> Prosper R. George</h1>
           <div class="social-links mt-3 text-center">
             <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
