--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <header id="header">
       <div class="d-flex flex-column">
         <div class="profile">
-          <img src="image/designwiz.png" alt="" class="image-fluid rounded-circle">
+          <img src="image/the designer.jpg" alt="" class="image-fluid rounded-circle">
           <h1 class="text-light">DesignWiz</h1>
           <div class="social-links mt-3 text-center">
             <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -119,7 +119,7 @@
 
             </div>
 
-            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
+            <div class="d-none projectList col-md-6 mb-4 mt-1">
               <div class="box design">
 
                 <div class="img">
@@ -165,15 +165,15 @@
               <div class="box design">
 
                 <div class="img">
-                  <img src="image/project/designs/design6.png" alt="Cool Concepts: Ice Cube Company Design Showcase">
+                  <img src="image/project/designs/design12.png" alt="Cool Concepts: Simple poster design idea">
                 </div>
 
                 <div class="name">
-                  Cool Concepts: Ice Cube Company Design Showcase
+                  Cool Concepts: Simple poster design idea
                 </div>
 
                 <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Cool Concepts: Ice Cube Company Design Showcase" data-id="image/project/designs/design6.png" onclick="enlarge(this)">
+                  <div role="button" class="projectImg" data-filter="Cool Concepts: Simple poster design idea" data-id="image/project/designs/design12.png" onclick="enlarge(this)">
                     View Design
                   </div>
                 </div>
@@ -257,48 +257,6 @@
 
             </div>
 
-            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1 d-none">
-              <div class="box design">
-
-                <div class="img">
-                  <img src="image/project/designs/design7.png" alt="Thank You Card Design: Thoughtful Gestures">
-                </div>
-
-                <div class="name">
-                  Thank You Card Design: Thoughtful Gestures
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="image/project/designs/design7.png" onclick="enlarge(this)">
-                    View Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
-            <div class="col-xl-4 projectList col-md-6 mb-4 mt-1 d-none">
-              <div class="box design">
-
-                <div class="img">
-                  <img src="image/project/designs/design9.png" alt="Thank You Card Design: Thoughtful Gestures">
-                </div>
-
-                <div class="name">
-                  Thank You Card Design: Thoughtful Gestures
-                </div>
-
-                <div class="purchase d-flex justify-content-between">
-                  <div role="button" class="projectImg" data-filter="Thank You Card Design: Thoughtful Gestures" data-id="image/project/designs/design9.png" onclick="enlarge(this)">
-                    View Design
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
-
             <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
               <div class="box design">
 
@@ -361,6 +319,7 @@
               </div>
 
             </div>
+            
 
             <!--==== <div class="col-md-12 projectList mb-4 mt-1">
               <div class="box d-block d-xl-flex web">
@@ -632,7 +591,7 @@
             <i class="bx bx-left-arrow-alt left prevImg"></i>
 
             <div class="img">
-              <img src="image/project/designs/design6.png" id="enlargedImg" alt="design">
+              <img src="image/project/designs/design12.png" id="enlargedImg" alt="design">
               <div class="turner"></div>
             </div>
 
