--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img src="image/the designer.jpg" alt="" class="image-fluid rounded-circle">
-          <h1 class="text-light">DesignWiz</h1>
+          <h1 class="text-light">Prosper R. George</h1>
           <div class="social-links mt-3 text-center">
             <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/prosper_richmond_george28/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
