--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="d-flex mb-4">
 
                 <div class="img me-3">
-                  <img src="image/designwiz.png" alt="An image of our logo">
+                  <img src="image/the designer.jpg" alt="The Designer">
                 </div>
                 
                 <div class="heading iLove">
@@ -171,8 +171,8 @@
         <div class="container">
 
           <div class="heading">
-            <span>Our Services</span> <br>
-            <h3>Our Services</h3>
+            <span>Services i Offer</span> <br>
+            <h3>Services i Offer</h3>
           </div>
 
           <div class="row mt-5">
@@ -315,8 +315,8 @@
         <div class="container">
 
           <div class="heading">
-            <span> Projects i've <br> Worked on </span> <br>
-            <h3> Projects i've <br> Worked on </h3>
+            <span> My Projects</span> <br>
+            <h3> My Projects</h3>
           </div>
 
           <div class="row mt-5">
@@ -519,8 +519,8 @@
         <div class="container">
 
           <div class="heading">
-            <span>Skills</span> <br>
-            <h3>Skills</h3>
+            <span>My Skills</span> <br>
+            <h3>My Skills</h3>
           </div>
 
           <div class="heading2 mt-5">
@@ -579,18 +579,6 @@
           <div class="row mt-5">
             <div class="col-md-12">
               <div class="box">
-
-                 <div class="img mx-auto">
-                  <img src="image/designwiz.png" alt="An image our logo">
-                </div>
-
-                <div class="name mx-auto">
-                  DesignWiz
-                </div>
-
-                <div class="position">
-                  Graphic Designing / Front End Developmrnt / Wordpress Development / Freelancing
-                </div>
 
                 <div class="resumeBtn d-flex justify-content-center">
                   <a role="button" id="shareBook" class="my-btn2"> <i class="bx bx-share"></i> Share page </a>
@@ -719,8 +707,8 @@
 
                         <div class="d-flex justify-content-around social-links mt-3 text-center">
 
-                          <a href="https://web.facebook.com/OfficialDesignWiz/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-                          <a href="https://www.instagram.com/offical_design_wiz/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                          <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                          <a href="https://www.instagram.com/prosper_richmond_george28/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                           <a href="https://wa.me/message/VHWMGTLN2TYKA1" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                           <a href="https://www.linkedin.com/in/designwiz/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                           <a href="https://www.fiverr.com/prospergeorge28" target="_blank" class="fiver fw-bold">fi</a>
