--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,11 @@
 
         <div class="container">
 
+          <div class="heading">
+            <span> My Projects</span> <br>
+            <h3> My Projects</h3>
+          </div>
+
           <div class="row mt-5">
 
             <div class="col-xl-4 projectList col-md-6 mb-4 mt-1">
@@ -385,25 +390,13 @@
         <div class="container">
 
           <div class="heading">
-            <span> Connect <br class="d-sm-none"> with us </span> <br>
-            <h3> Connect <br class="d-sm-none"> with us  </h3>
+            <span> Connect With Me </span> <br>
+            <h3> Connect With Me  </h3>
           </div>
 
           <div class="row mt-5">
             <div class="col-md-12">
               <div class="box">
-
-                 <div class="img mx-auto">
-                  <img src="image/designwiz.png" alt="An image our logo">
-                </div>
-
-                <div class="name mx-auto">
-                  DesignWiz
-                </div>
-
-                <div class="position">
-                  Graphic Designing / Front End Developmrnt / Wordpress Development / Freelancing
-                </div>
 
                 <div class="resumeBtn d-flex justify-content-center">
                   <a role="button" id="shareBook" class="my-btn2"> <i class="bx bx-share"></i> Share page </a>
@@ -532,8 +525,8 @@
 
                         <div class="d-flex justify-content-around social-links mt-3 text-center">
 
-                          <a href="https://web.facebook.com/OfficialDesignWiz/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-                          <a href="https://www.instagram.com/offical_design_wiz/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                          <a href="https://web.facebook.com/Mainrichie28" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                          <a href="https://www.instagram.com/prosper_richmond_george28/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                           <a href="https://wa.me/message/VHWMGTLN2TYKA1" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                           <a href="https://www.linkedin.com/in/designwiz/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                           <a href="https://www.fiverr.com/prospergeorge28" target="_blank" class="fiver fw-bold">fi</a>
@@ -605,7 +598,7 @@
       </section>
 
       <section class="">
-        <p class="text-center text-white"> Copyright © 2024 designwiz </p>
+        <p class="text-center text-white"> Copyright © 2024 Prosper Richmond George </p>
       </section>
 
     </main>
