--- a/projects.html
+++ b/projects.html
@@ -58,9 +58,9 @@
 
       <section id="projects" class="projects border-bt">
 
-        <div class="container">
+        <div class="container pt-3 pt-md-0">
 
-          <div class="heading">
+          <div class="heading pt-5 pt-md-0">
             <span> My Projects</span> <br>
             <h3> My Projects</h3>
           </div>
@@ -546,7 +546,7 @@
 
       </section>
       
-      <div class="caseStudy px-4 invisibleBox" id="caseStudy">
+      <div class="caseStudy invisibleBox" id="caseStudy">
 
           <div class="bars d-flex flex-column align-items-center justify-content-center closeCaseStudy">
             <div class="bar1"></div>
